--- a/ih8sn.conf
+++ b/ih8sn.conf
@@ -1,8 +1,8 @@
-# BUILD_FINGERPRINT=OnePlus/OnePlus7Pro_EEA/OnePlus7Pro:10/QKQ1.190716.003/1910071200:user/release-keys
-# BUILD_DESCRIPTION=OnePlus7Pro-user 10 QKQ1.190716.003 1910071200 release-keys
-# BUILD_SECURITY_PATCH_DATE=2019-09-05
-# BUILD_TAGS=release-keys
-# BUILD_TYPE=user
-# BUILD_VERSION_RELEASE=10
-# DEBUGGABLE=0
-# PRODUCT_NAME=OnePlus7Pro
+BUILD_FINGERPRINT=google/redfin/redfin:11/RQ3A.211001.001/7641976:user/release-keys
+BUILD_DESCRIPTION=redfin-user 11 RQ3A.211001.001 7641976 release-keys
+BUILD_SECURITY_PATCH_DATE=2021-10-01
+BUILD_TAGS=release-keys
+BUILD_TYPE=user
+BUILD_VERSION_RELEASE=11
+DEBUGGABLE=0
+PRODUCT_NAME=redfin
