--- a/ih8sn.conf
+++ b/ih8sn.conf
@@ -1,9 +1,9 @@
-BUILD_FINGERPRINT=POCO/alioth_global/alioth:11/RKQ1.200826.002/V12.5.6.0.RKHMIXM:user/release-keys
-BUILD_DESCRIPTION=alioth_global-user 11 RKQ1.200826.002 V12.5.6.0.RKHMIXM release-keys
-BUILD_SECURITY_PATCH_DATE=2022-01-01
+BUILD_FINGERPRINT=Mi/aliothin/aliothin:11/RKQ1.200826.002/V12.5.7.0.RKHINXM:user/release-keys
+BUILD_DESCRIPTION=aliothin-user 11 RKQ1.200826.002 V12.5.7.0.RKHINXM release-keys
+BUILD_SECURITY_PATCH_DATE=2021-12-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
 BUILD_VERSION_RELEASE=11
 DEBUGGABLE=0
 MANUFACTURER_NAME=Xiaomi
-PRODUCT_NAME=alioth_global
+PRODUCT_NAME=Mi 11X
