--- a/ih8sn.conf
+++ b/ih8sn.conf
@@ -1,9 +1,9 @@
-BUILD_FINGERPRINT=Mi/aliothin/aliothin:11/RKQ1.200826.002/V12.5.7.0.RKHINXM:user/release-keys
-BUILD_DESCRIPTION=aliothin-user 11 RKQ1.200826.002 V12.5.7.0.RKHINXM release-keys
-BUILD_SECURITY_PATCH_DATE=2021-12-01
+BUILD_FINGERPRINT=Mi/aliothin/aliothin:12/SKQ1.211006.001/V13.0.4.0.SKHINXM:user/release-keys
+BUILD_DESCRIPTION=aliothin-user 12 SKQ1.211006.001 V13.0.4.0.SKHINXM release-keys
+BUILD_SECURITY_PATCH_DATE=2022-02-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
-BUILD_VERSION_RELEASE=11
+BUILD_VERSION_RELEASE=12
 DEBUGGABLE=0
 MANUFACTURER_NAME=Xiaomi
 PRODUCT_NAME=Mi 11X
