--- a/ih8sn.conf
+++ b/ih8sn.conf
@@ -4,6 +4,7 @@ BUILD_SECURITY_PATCH_DATE=2022-04-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
 BUILD_VERSION_RELEASE=12
+BUILD_VERSION_RELEASE_OR_CODENAME=12
 DEBUGGABLE=0
 MANUFACTURER_NAME=Xiaomi
 PRODUCT_NAME=Mi 11X
