--- a/system/etc/ih8sn.conf
+++ b/system/etc/ih8sn.conf
@@ -7,5 +7,6 @@ BUILD_VERSION_RELEASE=12
 BUILD_VERSION_RELEASE_OR_CODENAME=12
 DEBUGGABLE=0
 MANUFACTURER_NAME=Xiaomi
+PRODUCT_MODEL=M2012K11AI
 PRODUCT_NAME=Mi 11X
 SECURE=1
