Allow overriding product brand and device
Change-Id: Ie7df167a5390d02e76a968cd780a04f69b9486dc

--- a/system/etc/ih8sn.conf
+++ b/system/etc/ih8sn.conf
@@ -7,6 +7,8 @@ BUILD_VERSION_RELEASE=12
 BUILD_VERSION_RELEASE_OR_CODENAME=12
 DEBUGGABLE=0
 MANUFACTURER_NAME=Xiaomi
+PRODUCT_BRAND=Mi
+PRODUCT_DEVICE=aliothin
 PRODUCT_MODEL=M2012K11AI
-PRODUCT_NAME=Mi 11X
+PRODUCT_NAME=Mi 11X 
 SECURE=1
