--- a/system/etc/ih8sn.conf
+++ b/system/etc/ih8sn.conf
@@ -3,6 +3,7 @@ BUILD_DESCRIPTION=aliothin-user 12 SKQ1.211006.001 V13.0.10.0.SKHINXM release-ke
 BUILD_SECURITY_PATCH_DATE=2023-01-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
+BUILD_VERSION_DEVICE_INITIAL_SDK_INT=30
 BUILD_VERSION_RELEASE=12
 BUILD_VERSION_RELEASE_OR_CODENAME=12
 DEBUGGABLE=0
