conf: Set product name to aliothin
Signed-off-by: pawar-mahesh <pawar.mahesh2345@gmail.com>

--- a/system/etc/ih8sn.conf
+++ b/system/etc/ih8sn.conf
@@ -12,5 +12,5 @@ MANUFACTURER_NAME=Xiaomi
 PRODUCT_BRAND=Mi
 PRODUCT_DEVICE=aliothin
 PRODUCT_MODEL=M2012K11AI
-PRODUCT_NAME=Mi 11X
+PRODUCT_NAME=aliothin
 SECURE=1
