ih8sn: Spoof product board
Signed-off-by: pawar-mahesh <pawar.mahesh2345@gmail.com>

--- a/system/etc/ih8sn.conf
+++ b/system/etc/ih8sn.conf
@@ -9,6 +9,7 @@ BUILD_VERSION_RELEASE=12
 BUILD_VERSION_RELEASE_OR_CODENAME=12
 DEBUGGABLE=0
 MANUFACTURER_NAME=Xiaomi
+PRODUCT_BOARD=aliothin
 PRODUCT_BRAND=Mi
 PRODUCT_DEVICE=aliothin
 PRODUCT_MODEL=M2012K11AI
