--- a/system/etc/ih8sn.conf
+++ b/system/etc/ih8sn.conf
@@ -1,17 +1,16 @@
-BUILD_FINGERPRINT=Mi/aliothin/aliothin:12/SKQ1.211006.001/V13.0.10.0.SKHINXM:user/release-keys
-BUILD_DESCRIPTION=aliothin-user 12 SKQ1.211006.001 V13.0.10.0.SKHINXM release-keys
-BUILD_SECURITY_PATCH_DATE=2023-01-01
-VENDOR_SECURITY_PATCH_DATE=2023-01-01
+BUILD_FINGERPRINT=google/raven/raven:13/TQ1A.230105.002/9325679:user/release-keys
+BUILD_DESCRIPTION=raven-user 13 TQ1A.230105.002 9325679 release-keys
+BUILD_SECURITY_PATCH_DATE=2023-01-05
+VENDOR_SECURITY_PATCH_DATE=2023-01-05
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
 BUILD_VERSION_DEVICE_INITIAL_SDK_INT=30
-BUILD_VERSION_RELEASE=12
-BUILD_VERSION_RELEASE_OR_CODENAME=12
+BUILD_VERSION_RELEASE=13
+BUILD_VERSION_RELEASE_OR_CODENAME=13
 DEBUGGABLE=0
-MANUFACTURER_NAME=Xiaomi
-PRODUCT_BOARD=aliothin
-PRODUCT_BRAND=Mi
-PRODUCT_DEVICE=aliothin
-PRODUCT_MODEL=M2012K11AI
-PRODUCT_NAME=aliothin
+MANUFACTURER_NAME=Google
+PRODUCT_BRAND=google
+PRODUCT_DEVICE=raven
+PRODUCT_MODEL=Pixel 6 Pro
+PRODUCT_NAME=raven
 SECURE=1
